--- a/03-multi-containers.yaml
+++ b/03-multi-containers.yaml
@@ -1,3 +1,16 @@
+# apiVersion: v1
+# kind: Pod
+# metadata:
+#   name: multi-containers
+# spec:
+#   containers:
+#   - name: nginx
+#     image: nginx
+#   - name: almalinux
+#     image: almalinux:9
+#     command: ["sleep", "1000"]
+
+
 apiVersion: v1
 kind: Pod
 metadata:
