--- a/09-pod-config.yaml
+++ b/09-pod-config.yaml
@@ -13,4 +13,7 @@ spec:
             name: nginx-config
             key: course
       - name: duration
-        value: "120hr"
+        valueFrom:
+          configMapKeyRef:
+            name: nginx-config
+            key: duration
