--- a/09-pod-config.yaml
+++ b/09-pod-config.yaml
@@ -9,7 +9,7 @@ spec:
     env:
       - name: course
         valueFrom:
-          configMapkeyRef:
+          configMapKeyRef:
             name: nginx-config
             key: course
       - name: duration
