--- a/12-services.yaml
+++ b/12-services.yaml
@@ -1,14 +1,14 @@
 kind: Service
-apiVersion: V1
+apiVersion: v1
 metadata:
   name: nginx
 spec:
   selector:
-    Project: expense
+    project: expense
     module: backend
     environment: dev
   ports:
   - name: nginx-svc-port
     protocol: TCP
-    Port: 80
+    port: 80
     targetPort: 80
