--- a/15-replicaset.yaml
+++ b/15-replicaset.yaml
@@ -20,3 +20,17 @@ spec:
       containers:
       - name: nginx
         image: nginx
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: nginx
+spec:
+  selector:
+   tier: frontend
+   app: nginx
+  ports:
+  - name: nginx-svc-port
+    protocol: TCP
+    port: 80
+    targetPort: 80
