--- a/01-namespace.yaml
+++ b/01-namespace.yaml
@@ -3,5 +3,6 @@ kind: Namespace
 metadata:
   name: expense
   labels:
-    project: expense
-    environment: dev
+   name: Expense
+   environment: Dev
+
