--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -1,8 +1,11 @@
 apiVersion: v1
-kind: Pod
+kind: pod
 metadata:
-  name: nginx
+ name: pod
+ labels:
+  name: pod_ref
+  env: Dev
 spec:
-  containers:
+ containers:
   - name: nginx
     image: nginx
