--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -1,11 +1,8 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
- name: pod
- labels:
-  name: pod_ref
-  env: Dev
+  name: nginx
 spec:
- containers:
+  containers:
   - name: nginx
     image: nginx
