--- a/volume/01-ebs-static.yaml
+++ b/volume/01-ebs-static.yaml
@@ -30,6 +30,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: ebs-static
+  labels:
+   purpose: ebs-static
 spec:
   nodeSelector:
     topology.kubernetes.io/zone: us-east-1a
@@ -43,3 +45,19 @@ spec:
   - name: ebs-static
     persistentVolumeClaim:
       claimName: ebs-static
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: nginx
+  namespace: expense
+spec:
+ type: LoadBalancer
+ selector:
+  purpose: ebs-static
+ ports:
+  - name: nginx-port
+    protocol: TCP
+    port: 80 #service port
+    targetPort: 80 # container port it is optional
+    nodePort: 30007
