--- a/volume/04-efs-static.yaml
+++ b/volume/04-efs-static.yaml
@@ -27,3 +27,38 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: efs-static
+  labels:
+   purpose: efs-static
+spec:
+  nodeSelector:
+    topology.kubernetes.io/zone: us-east-1a
+  containers:
+  - name: nginx
+    image: nginx
+    volumeMounts: #docker run -v hostpath:containerpath
+    - name: expense-efs
+      mountPath: /usr/share/nginx/html
+  volumes:
+  - name: expense-efs
+    persistentVolumeClaim:
+      claimName: expense-efs
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: nginx
+spec:
+ type: LoadBalancer
+ selector:
+  purpose: efs-static
+ ports:
+  - name: nginx-port
+    protocol: TCP
+    port: 80 #service port
+    targetPort: 80 # container port it is optional
+    nodePort: 30007
